<resources>
    <string name="app_name">My Price Watcher</string>
    <string name="action_settings">Settings</string>
    <string name="title_label">Watched Prices</string>
    <string name="item_name_template"><![CDATA[<b>Item Name:</b> %s]]></string>
    <string name="init_price_template"><![CDATA[<b>Initial Price:</b> %s <i>(added: %s)</i>]]></string>
    <string name="curr_price_template"><![CDATA[<b>Current Price:</b> %s]]></string>
    <string name="perc_change_template"><![CDATA[<b>Change:</b> %s]]></string>
    <string name="url_template"><![CDATA[<b>URL:</b> <a href="%s"><b>Visit Site</b></a>]]></string>
    <string name="refresh_button_label">Refresh</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="items_list_title">Items</string>
    <string name="item_name_label"><b><u>Item Name</u></b></string>
    <string name="item_init_price_label"><b><u>Initial Price</u></b></string>
    <string name="item_curr_price_label"><b><u>Current Price</u></b></string>
    <string name="context_refresh_label">Refresh Price</string>
    <string name="context_delete_label">Delete Item</string>
    <string name="context_edit_item_label">Edit Item</string>
    <string name="delete_dialog_prompt">Are you sure you want to delete this item?</string>
    <string name="yes_dialog_button_label">YES</string>
    <string name="no_dialog_button_label">@android:string/cancel</string>
    <string name="add_item_prompt">Enter URL</string>
    <string name="edit_item_name_hint">(Item Name)</string>
    <string name="edit_item_url_hint">(Item URL)</string>
    <string name="edit_item_name_prompt">Name:</string>
    <string name="edit_item_url_prompt">URL:</string>
</resources>
