<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/item_name_label"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/init_price_labell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/item_init_price_label"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/curr_price_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/item_curr_price_label"
        android:gravity="center_horizontal"/>
</LinearLayout>
